--- a/packages/buitar/src/style/global.scss
+++ b/packages/buitar/src/style/global.scss
@@ -15,16 +15,11 @@
 
 	width: $btn-size;
 	height: $btn-size;
-	background: $gray-primary;
 	transition: all 0.15s linear;
 	overflow: hidden;
 	cursor: pointer;
-
-	@media (any-hover: hover) {
-		&:hover {
-			background: $gray-second;
-		}
-	}
+	
+	@include touch-color($gray-primary, $gray-second);
 }
 
 .buitar-primary-range {
@@ -74,6 +69,9 @@
 
 .touch-yellow {
 	@include touch-color;
+}
+.touch-primary {
+	@include touch-color($gray-primary, $gray-second);
 }
 .touch-blue {
 	@include touch-color($blue-primary, $blue-second);
