--- a/packages/buitar/src/components/guitar-board/board-controller/degree-controller/degree-controller.module.scss
+++ b/packages/buitar/src/components/guitar-board/board-controller/degree-controller/degree-controller.module.scss
@@ -44,7 +44,7 @@ $degree-btn-size: calc($btn-size * 1.6);
 
 .degree-container {
 	width: 100%;
-	height: 60vh;
+	max-height: 60vh;
 	overflow-y: scroll;
 
 	.degree-view {
