--- a/packages/buitar/src/style/animation.scss
+++ b/packages/buitar/src/style/animation.scss
@@ -7,7 +7,7 @@
 	}
 }
 
-:global(.fade-in) {
+.fade-in {
 	animation: fadeIn 0.3s ease-in-out;
 }
 
@@ -22,6 +22,6 @@
 	}
 }
 
-:global(.slide-right-in) {
+.slide-right-in {
 	animation: slideRightIn 0.3s ease-in-out;
 }
