--- a/packages/buitar/src/style/global.scss
+++ b/packages/buitar/src/style/global.scss
@@ -104,6 +104,18 @@
 	background-color: rgba(0, 0, 0, 0.5);
 }
 
+.toast {
+	position: fixed;
+	bottom: 20%;
+    left: 50%;
+    transform: translateX(-50%);
+	z-index: 199;
+	background-color: rgba($gray-third, 0.8);
+	padding: calc($btn-margin * 5) calc($btn-margin * 10);
+	border-radius: calc($btn-margin * 2);
+	pointer-events: none;
+}
+
 .text-input {
 	@include flex-center;
 	font-size: $font-14;
