--- a/packages/buitar/src/pages/play-tools/play-tools.module.scss
+++ b/packages/buitar/src/pages/play-tools/play-tools.module.scss
@@ -1,8 +1,15 @@
 .route-item {
-	// width: 100%;
-	// height: 100%;
+	width: fit-content;
+	height: 100%;
 	color: $white-01;
 	text-decoration: none;
-    margin: calc($btn-margin * 3);
+    padding: calc($btn-margin * 2) calc($btn-margin * 3);
     display: block;
+}
+
+.intro-title {
+	font-size: 40px;
+	font-weight: bold;
+	opacity: 0.8;
+	margin-bottom: 24px;
 }
