--- a/packages/buitar/src/pages/guitar-tableture/guitar-tableture.module.scss
+++ b/packages/buitar/src/pages/guitar-tableture/guitar-tableture.module.scss
@@ -2,6 +2,20 @@
 	width: calc($btn-size * 8);
 }
 
+.tableture-tab-wrap {
+	display: flex;
+	.tableture-lock {
+		height: calc($btn-size * 0.8);
+		width: calc($btn-size * 0.8);
+		border-radius: calc($btn-margin * 2);
+		opacity: 0.4;
+		@include flex-center
+	}
+	.tableture-locked {
+		opacity: 1;
+	}
+}
+
 .tableture-list-options {
 	display: flex;
 	.tableture-options-mode {
