feat: tabletrue add chordview

--- a/packages/buitar/src/pages/guitar-tableture/guitar-tableture.module.scss
+++ b/packages/buitar/src/pages/guitar-tableture/guitar-tableture.module.scss
@@ -16,6 +16,18 @@
 	}
 }
 
+.tableture-chord-wrap {
+	display: flex;
+	.tableture-chord-title {
+		height: auto;
+		min-width: calc($btn-size * 2);
+		@include flex-center();
+	}
+	.tableture-chord-list {
+		display: flex;
+	}
+}
+
 .tableture-list-options {
 	display: flex;
 	.tableture-options-mode {
