feat: 更新命名 & 对应文档

--- a/packages/buitar/src/components/slide-menu/slide-item.module.scss
+++ b/packages/buitar/src/components/slide-menu/slide-item.module.scss
@@ -124,7 +124,7 @@ $side-width: 60px;
 			bottom: 0;
 			width: 100%;
 			@media #{$mobileLayout} {
-				display: none;
+				margin-left: -20px;
 			}
 		}
 	}
