feat: 修复部分默认UI

--- a/packages/buitar/src/components/guitar-board/board-controller/chord-card/chord-card.module.scss
+++ b/packages/buitar/src/components/guitar-board/board-controller/chord-card/chord-card.module.scss
@@ -70,7 +70,7 @@
 
 		.detail-name {
 			text-transform: capitalize;
-
+			white-space: nowrap;
 			.detail-subname {
 				margin-top: 5px;
 				font-size: 12px;
