--- a/packages/buitar/src/components/chord-list/chord-list.module.scss
+++ b/packages/buitar/src/components/chord-list/chord-list.module.scss
@@ -9,7 +9,8 @@
 			padding: 0 calc($btn-size * 0.4);
 			font-weight: bold;
 			white-space: nowrap;
-			flex: 1;
+			width: auto;
+			min-width: 20vw;
 			@include flex-center();
 		}
 
