--- a/packages/buitar/src/components/fixed-btn/audio-btn.module.scss
+++ b/packages/buitar/src/components/fixed-btn/audio-btn.module.scss
@@ -1,9 +1,6 @@
 .audio-btn {
-	position: fixed;
-	right: 20px;
-	top: 20px;
-	width: 32px !important;
-	height: 32px !important;
+	width: 32px;
+	height: 32px;
 	cursor: pointer;
 	background: none;
 	border: none;
