fix: mobile hover for menu

--- a/packages/buitar/src/components/slide-menu/slide-item.module.scss
+++ b/packages/buitar/src/components/slide-menu/slide-item.module.scss
@@ -111,6 +111,11 @@ $tab-height: 60px;
 				align-items: center;
 				justify-content: center;
 				padding: 0;
+
+				&:hover {
+					padding-left: unset;
+				}
+
 				&-name {
 					font-size: $font-10;
 					margin: 4px 0 0;
