--- a/packages/buitar/src/components/chord-list/chord-list.module.scss
+++ b/packages/buitar/src/components/chord-list/chord-list.module.scss
@@ -27,8 +27,8 @@
 			white-space: nowrap;
 			flex: 1;
 			display: flex;
-			align-items: end;
-			justify-content: start;
+			align-items: flex-end;
+			justify-content: flex-start;
 		}
 	}
 }
