--- a/packages/buitar/src/components/fixed-btn/fixed-btns.module.scss
+++ b/packages/buitar/src/components/fixed-btn/fixed-btns.module.scss
@@ -2,11 +2,11 @@
 	position: fixed;
 	right: 20px;
 	bottom: 100px;
-	z-index: 99;
+	z-index: 1;
 }
 .btn {
-	width: 32px;
-	height: 32px;
+	width: $btn-size;
+	height: $btn-size;
 	cursor: pointer;
 	margin: $space-6;
 	background: $gray-02;
@@ -18,6 +18,7 @@
 	@media (any-hover: hover) {
 		&:hover {
 			background: $gray-03;
+			opacity: 1;
 		}
 	}
 }
