--- a/packages/buitar/src/style/definitions/app.scss
+++ b/packages/buitar/src/style/definitions/app.scss
@@ -25,6 +25,18 @@ $cyan-second: rgb(145, 145, 14);
 $purple-primary: rgb(209, 91, 47);
 $purple-second: rgb(189, 80, 41);
 
+$z-index-1: 100;
+$z-index-2: 200;
+$z-index-3: 300;
+$z-index-4: 400;
+$z-index-5: 500;
+
+$z-index-navbar: $z-index-1;
+$z-index-fixed: $z-index-2;
+$z-index-overlay: $z-index-3;
+$z-index-modal: $z-index-4;
+$z-index-toast: $z-index-5;
+
 $btn-size: var(--btn-size);
 $btn-margin: var(--btn-margin);
 $btn-radius: var(--btn-radius);
