--- a/packages/buitar/src/style/global.scss
+++ b/packages/buitar/src/style/global.scss
@@ -110,10 +110,9 @@ a {
 	left: 0;
 	width: 100%;
 	height: 100%;
+	min-width: 100vw;
+	min-height: 100vh;
 	z-index: $z-index-overlay;
-
-	backdrop-filter: blur(10px);
-	background-color: rgba(0, 0, 0, 0.5);
 }
 
 .toast {
