--- a/packages/buitar/src/style/definitions/app.scss
+++ b/packages/buitar/src/style/definitions/app.scss
@@ -63,4 +63,7 @@ $font-22: var(--font-22);
 	gray_primary: $gray-primary;
 	gray_second: $gray-second;
 	yellow_primary: $yellow-primary;
+
+	btn_size: $btn-size;
+	btn_margin: $btn-margin;
 }
